@@ -1,5 +1,5 @@
 /* Hello, Emacs, this is -*-C-*-
- * $Id: gd.trm,v 1.48 2004/08/27 19:05:38 sfeam Exp $
+ * $Id: gd.trm,v 1.49 2004/09/01 15:53:50 mikulik Exp $
  * based on gif.trm,v 1.26.2.1 2000/05/01 00:17:20 joze
  */
 
@@ -717,12 +717,6 @@ PNG_options()
     else if (png_state.TrueColor) {
 	strcat(term_options, "truecolor ");
     }
-    /* JPEG files are always 24-bit color */
-    if (strcmp(term->name, "jpeg") == 0)
-	png_state.TrueColor = TRUE;
-    else if (png_state.TrueColor) {
-	strcat(term_options, "truecolor ");
-    }
     if (!(png_state.flags & PNG_USE_CROP)) {
 	strcat(term_options, "no");
     }
@@ -896,25 +890,6 @@ TERM_PUBLIC int PNG_make_palette (t_sm_palette *palette)
     }
 
 
-#ifdef WITH_IMAGE
-TERM_PUBLIC
-void PNG_set_color (double gray)
-{
-    if (png_state.TrueColor) {
-	rgb255_color color;
-	rgb255_from_gray(gray, &color);
-	png_state.color = gdImageColorResolve(png_state.image,
-	    (int)color.r, (int)color.g, (int)color.b);
-	return;
-    } else {
-	int png_color = (gray <= 0) ? 0 : (int)(gray * sm_palette.colors);
-	if (png_color >= sm_palette.colors)
-	    png_color = sm_palette.colors - 1;
-	/* map [0;1] to interval [0;png_smooth_colors-1] */
-	png_state.color = png_smooth_color[ png_color ];
-    }
-}
-#else
 TERM_PUBLIC
 void PNG_set_color (double gray)
 {
@@ -932,7 +907,6 @@ void PNG_set_color (double gray)
 	png_state.color = png_smooth_color[ png_color ];
     }
 }
-#endif
 
 
 TERM_PUBLIC
@@ -1717,7 +1691,7 @@ PNG_image (unsigned M, unsigned N, coordval * image, gpiPoint * corner, t_imagec
 	for (n=0; n<N; n++) {
 	for (m=0; m<M; m++) {
 	    rgb255_color rgb;
-	    rgb255_from_gray( *image++, &rgb );
+	    rgb255maxcolors_from_gray( *image++, &rgb );
 	    pixel = gdImageColorResolve( im,
 		(int)rgb.r, (int)rgb.g, (int)rgb.b );
 	    gdImageSetPixel( im, m, n, pixel );
@@ -2078,6 +2052,9 @@ TERM_TABLE_START(gif_driver)
     0, /* previous_palette() ... no, single array of 256 colours for PNG */
     PNG_set_color,
     PNG_filled_polygon
+#endif
+#ifdef WITH_IMAGE
+    , PNG_image
 #endif
     , ENHGD_OPEN, ENHGD_FLUSH, do_enh_writec
 TERM_TABLE_END(png_driver)
